[project]
name = "zm13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunkm", email = "okuratesu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm13 = "zm13.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
